Update after sync and reviews

--- a/config.json
+++ b/config.json
@@ -1,2 +1,4 @@
 {"auth_token": "PUT_YOUR_BEEMINDER_AUTH_TOKEN_HERE",
- "goal": {"slug": "PUT_YOUR_BEEMINDER_GOAL_SHORT_NAME_HERE"}}
+ "goal": {"slug": "PUT_YOUR_BEEMINDER_GOAL_SHORT_NAME_HERE"},
+ "update_after": {"syncing": true,
+                  "finishing_reviews": true}}
