Use beeminder_slug in config and docs like code expects

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {"auth_token": "PUT_YOUR_BEEMINDER_AUTH_TOKEN_HERE",
- "goals": [{"slug": "PUT_YOUR_BEEMINDER_GOAL_SHORT_NAME_HERE"}],
+ "goals": [{"beeminder_slug": "PUT_YOUR_BEEMINDER_GOAL_SHORT_NAME_HERE"}],
  "update_after": {"syncing": true,
                   "finishing_reviews": true},
  "pessimistic_reports": {"days_ahead": 7}}
